# shudu

./: DEPLOYMENT.md  DESKTOP_DEVELOPMENT_GUIDE.md  DEVELOPMENT_PLAN1.md  README.md  USAGE.md  deploy.sh  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/platform/: storage.ts  updater.ts
apps/web/: package.json
apps/web/src/: App.tsx  index.css
